@@ -1,17 +1,3 @@
-% $Author: sinnwell $ 
-% $Date: 2009/11/19 14:32:52 $ 
-% $Header: /people/biostat3/sinnwell/genet/rpack/PedShrink/RCS/findAvailNonInform.Rd,v 1.2 2009/11/19 14:32:52 sinnwell Exp $ 
-% $Locker:  $ 
-% $Log: findAvailNonInform.Rd,v $
-% Revision 1.2  2009/11/19 14:32:52  sinnwell
-% *** empty log message ***
-%
-% Revision 1.1  2008/07/16 19:59:42  sinnwell
-% Initial revision
-%
-% 
-%
-
 \name{findAvailNonInform}
 \alias{findAvailNonInform}
 \title{
@@ -34,7 +20,7 @@ findAvailNonInform(ped, avail)
   }
 }
 \value{
-Vector of subject ids
+Vector of subject ids who can be removed by having lowest informativeness.
 }
 \seealso{
 \code{\link{pedigree.shrink}}
